--- a/index.html
+++ b/index.html
@@ -48,5 +48,14 @@
             </form>
         </div>
     </header>
+    <section id="key-benefits">
+        <h2>Qual o nosso propósito?</h2>
+        <div class="benefits">
+            <div class="benefit"></div>
+            <div id="benefit-1" class="benefit-img"></div>
+            <p>Mobilizamos pessoas e potencializamos negócios por meio da tecnologia que entregamos. Nossos negócios estão amparados em comunicações diversas e, por isso, estamos presente na vida de milhares de pessoas todos os dias. Trabalhamos com a ousadia de quem pensa grande, com inovação e olhar para o futuro. Sempre comprometidos com a ética, a segurança e a sustentabilidade. E, para sermos tudo o que somos hoje e construirmos um futuro ainda mais promissor, contamos com uma cultura forte, que nasce de dentro pra fora e é traduzida por meio da nossa realidade virtual
+                :</p>
+        </div>
+    </section>
 </body>
 </html>
