--- a/index.html
+++ b/index.html
@@ -51,10 +51,35 @@
     <section id="key-benefits">
         <h2>Qual o nosso propósito?</h2>
         <div class="benefits">
-            <div class="benefit"></div>
+            <div class="benefit">
             <div id="benefit-1" class="benefit-img"></div>
-            <p>Mobilizamos pessoas e potencializamos negócios por meio da tecnologia que entregamos. Nossos negócios estão amparados em comunicações diversas e, por isso, estamos presente na vida de milhares de pessoas todos os dias. Trabalhamos com a ousadia de quem pensa grande, com inovação e olhar para o futuro. Sempre comprometidos com a ética, a segurança e a sustentabilidade. E, para sermos tudo o que somos hoje e construirmos um futuro ainda mais promissor, contamos com uma cultura forte, que nasce de dentro pra fora e é traduzida por meio da nossa realidade virtual
-                :</p>
+            <p>Mobilizamos pessoas e potencializamos negócios por meio da tecnologia que entregamos. </p>
+        </div>
+            <div class="benefit">
+            <div id="benefit-2" class="benefit-img"></div>
+            <p> Trabalhamos com a ousadia de quem pensa grande, com inovação e olhar para o futuro.</p>
+        </div>
+            <div class="benefit">
+            <div id="benefit-3" class="benefit-img"></div>
+            <p>Sempre comprometidos com a ética, a segurança e a sustentabilidade.</p>
+        </div>
+    </section>
+    <section id="location">
+        <div id="address">
+            <i class="bi bi-compass"></i>
+            <div id="address-details">
+                <p>R. Eduardo Alves, 40</p>
+                <p>Vila Mackenzie, Jandira - SP, 06602-140</p>
+                <p>Abertura da apresentação: 11h</p>
+
+        </div>
+    </div>
+
+        <div id="about-location">
+            <h3>Local de destaque</h3>
+            <p> O evento da SWTech será realizado em um local privilegiado por muitos cientistas de dados e computação, onde mostraremos como nossa Start Up está revolucionando a tecnologia. </p>
+          
+            </div>
         </div>
     </section>
 </body>
