Versão Desktop pronta

--- a/index.html
+++ b/index.html
@@ -78,9 +78,50 @@
         <div id="about-location">
             <h3>Local de destaque</h3>
             <p> O evento da SWTech será realizado em um local privilegiado por muitos cientistas de dados e computação, onde mostraremos como nossa Start Up está revolucionando a tecnologia. </p>
-          
             </div>
         </div>
     </section>
+    <section id="details">
+        <div class="detail" id="detail-1">
+            <img src="./img/oculos.jpg" alt="homem usando óculos VR">
+            <div class="detail-description">
+                <h3>Conheça as realidades que proporcionamos</h3>
+            </div>
+        </div>
+        <div class="detail" id="detail-2">
+            <div class="detail-description">
+                <h3>Detalhes</h3>
+                <ul>
+                    <li> Serviço de streaming </li>
+                    <li> Lives  </li>
+                    <li> Plataforma de vídeos  </li>
+                    <li> Jogos interativos </li>
+                    <li> E muito mais . . . </li>
+                </ul>
+            </div>
+            <img src="./img/stella-jacob-4lSz1Jv0Vkc-unsplash.jpg" alt="mulher usando óculos VR">
+        </div>
+        <div class="detail" id="detail-3">
+            <img src="./img/baixados.jpg" alt="tecnologia">
+            <div class="detail-description">
+                <h3>Social</h3>
+                <ul>
+                    <li> Inclusão para deficientes auditivos</li>
+                    <li> Inclusão para mobilidade reduzida </li>
+                    <li> Ambiente até possível para estudo </li>
+                    <li> E muito mais . . .</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <section id="cta">
+        <h3>Gostou? Então se inscreva:</h3>
+        <button class="btn">Solicitar Inscrição</button>
+    </section>
+    <footer id="footer">
+        <h3>SWTech</h3>
+        <p>A evolução no mundo tecnológico</p>
+        <p><span>Entre em contato: </span>(55) 4022-8922</p>
+    </footer>
 </body>
 </html>
