--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </section>
     <section id="details">
         <div class="detail" id="detail-1">
-            <img src="/img/oculos.jpg" alt="homem usando óculos VR">
+            <img src="./img/oculos.jpg" alt="homem usando óculos VR">
             <div class="detail-description">
                 <h3>Conheça as realidades que proporcionamos</h3>
             </div>
@@ -99,10 +99,10 @@
                     <li> E muito mais . . . </li>
                 </ul>
             </div>
-            <img src="/img/stella-jacob-4lSz1Jv0Vkc-unsplash.jpg" alt="mulher usando óculos VR">
+            <img src="./img/stella-jacob-4lSz1Jv0Vkc-unsplash.jpg" alt="mulher usando óculos VR">
         </div>
         <div class="detail" id="detail-3">
-            <img src="/img/baixados.jpg" alt="tecnologia">
+            <img src="./img/baixados.jpg" alt="tecnologia">
             <div class="detail-description">
                 <h3>Social</h3>
                 <ul>
